3.0
    removed Dockerfile
    the second argument of the VirtualEdgeIteratorState constructor is now an edge key (was an edge id before)

2.0
    AbstractFlagEncoder#getMaxSpeed returns now Double#NaN instead of -1 if no maxspeed was found
    renamed QueryResult -> Snap
    much faster CH preparation (node- and edge-based), but increased memory usage during preparation, #2132
    added navigation repo #2071
    use Java 8 also for core, client-hc and reader-osm modules. all modules use Java 8 now
    removed android demo, #1940
    added edge key path detail, #2073
    fixed bug for turn restrictions on bridges/tunnels, #2070
    improved resolution of elevation profiles, 3D Douglas-Peucker and long edge sampling, #1953

1.0
    changes to config.yml:
      properties have to follow the snake_case, #1918, easy convert via https://github.com/karussell/snake_case
      all routing profiles have to be configured when setting up GraphHopper, #1958, #1922
      for developing with JavaScript, npm and the web UI it is important to change your assets overrides to web/target/classes/assets/, see #2041
    moved SPTEntry and ShortcutUnpacker to com.graphhopper.routing(.ch)
    renamed PathWrapper to ResponsePath
    removed min_one_way_network_size parameter, #2042
    moved package from core/src/test/java/com/graphhopper/routing/profiles to ev
    removed HintsMap
    removed /change endpoint
    removed vehicle,weighting and edge_based from GraphHopper class, replaced with new profile parameter, #1958
    there no longer is a default vehicle, not setting the vehicle now only works if there is exactly one profile that matches the other parameters. anyway you should use the new profile rather than the vehicle parameter.
    removed IPFilter. Use a firewall instead.
    PMap refactored. It is recommended to use putObject(String, Object) instead of put, #1956
    removed UnsafeDataAccess as not maintained, see #1620