@@ -1,42 +1,0 @@
-/*
- *  Licensed to GraphHopper GmbH under one or more contributor
- *  license agreements. See the NOTICE file distributed with this work for
- *  additional information regarding copyright ownership.
- *
- *  GraphHopper GmbH licenses this file to you under the Apache License,
- *  Version 2.0 (the "License"); you may not use this file except in
- *  compliance with the License. You may obtain a copy of the License at
- *
- *       http://www.apache.org/licenses/LICENSE-2.0
- *
- *  Unless required by applicable law or agreed to in writing, software
- *  distributed under the License is distributed on an "AS IS" BASIS,
- *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- *  See the License for the specific language governing permissions and
- *  limitations under the License.
- */
-package com.graphhopper.routing.util.spatialrules;
-
-/**
- * Defining different types of transportation.
- * <p>
- * We started with a subset of the definition found in the OSM Wiki
- * https://wiki.openstreetmap.org/wiki/Key:access#Land-based_transportation
- *
- * @author Robin Boldt
- */
-public enum TransportationMode {
-
-    OTHER(0), MOTOR_VEHICLE(1), BICYCLE(2), FOOT(3);
-
-    private final int value;
-
-    TransportationMode(int value) {
-        this.value = value;
-    }
-
-    public int getValue() {
-        return value;
-    }
-
-}
