@@ -1,4 +1,5 @@
 3.0
+    refactored TransportationMode to better reflect the usage in source data parsing only
     removed Dockerfile
     the second argument of the VirtualEdgeIteratorState constructor is now an edge key (was an edge id before)
 
